@@ -15,6 +15,7 @@ import com.luomor.yiaroundad.network.api.UserService;
 import com.luomor.yiaroundad.network.api.VipService;
 import com.luomor.yiaroundad.network.around.AdAppService;
 import com.luomor.yiaroundad.network.around.AdApiService;
+import com.luomor.yiaroundad.network.around.ConfigService;
 import com.luomor.yiaroundad.network.around.FoodShopService;
 import com.luomor.yiaroundad.network.around.YiLiveService;
 import com.luomor.yiaroundad.network.around.YiRankService;
@@ -116,6 +117,10 @@ public class RetrofitHelper {
 
     public static FoodShopService getFoodShopAPI() {
         return createApi(FoodShopService.class, ApiConstants.AROUND_BASE_URL);
+    }
+
+    public static ConfigService getConfigAPI() {
+        return createApi(ConfigService.class, ApiConstants.AROUND_BASE_URL);
     }
 
     /**
