@@ -1,0 +1,10 @@
+package com.luomor.yiaroundad.utils.upgrade;
+
+/**
+ * Created by peterzhang on 27/02/2018.
+ */
+
+public interface Callback {
+    void download();
+    void quit();
+}
