@@ -1,0 +1,15 @@
+package com.luomor.yiaroundad.utils.upgrade;
+
+/**
+ * Created by peterzhang on 27/02/2018.
+ */
+
+public abstract class CallbackImpl implements Callback {
+    public void download() {
+
+    }
+
+    public void quit() {
+
+    }
+}
