@@ -1,0 +1,107 @@
+package com.luomor.yiaroundad.utils.upgrade;
+
+import android.content.Context;
+import android.content.pm.PackageInfo;
+import android.content.pm.PackageManager;
+import android.util.Log;
+
+import java.util.Arrays;
+
+/**
+ * Created by peterzhang on 09/02/2018.
+ */
+
+public class VersionManagementUtil {
+    private static final String TAG = "VersionManagementUtil";
+
+    private static Context mContext;
+
+    private static final VersionManagementUtil INSTANCE = new VersionManagementUtil();
+
+    public static VersionManagementUtil getInstance(Context mContext) {
+        VersionManagementUtil.mContext = mContext;
+        return VersionManagementUtil.INSTANCE;
+    }
+
+    /**
+     * 获取版本号
+     *
+     * @return 当前应用的版本号，默认是1.0.0
+     */
+    public static String getVersion(Context mContext) {
+        try {
+            PackageManager manager = mContext.getPackageManager();
+            PackageInfo info = manager.getPackageInfo(mContext.getPackageName(), 0);
+            String version = info.versionName;
+            return version;
+        } catch (Exception e) {
+            e.printStackTrace();
+            return "1.0.0";
+        }
+    }
+
+    /**
+     *
+     * @param versionServer String
+     * @param versionLocal String
+     * @return if versionServer > versionLocal, return 1, if equal, return 0, else return -1
+     */
+    public static int VersionComparison(String versionServer, String versionLocal) {
+        if (versionServer == null || versionServer.length() == 0 || versionLocal == null || versionLocal.length() == 0)
+            throw new IllegalArgumentException("Invalid parameter!");
+
+        int index1 = 0;
+        int index2 = 0;
+        while (index1 < versionServer.length() && index2 < versionLocal.length()) {
+            int[] number1 = getValue(versionServer, index1);
+            Log.i(TAG," ===== number1 ====" + Arrays.toString(number1));
+            int[] number2 = getValue(versionLocal, index2);
+            Log.i(TAG," ===== number2 ====" + Arrays.toString(number2));
+
+            if (number1[0] < number2[0]){
+                Log.i(TAG," ===== number1[0] ====" + number1[0]);
+                Log.i(TAG," ===== number2[0] ====" + number2[0]);
+                return -1;
+            } else if (number1[0] > number2[0]){
+                Log.i(TAG," ===== number1[0] ====" + number1[0]);
+                Log.i(TAG," ===== number2[0] ====" + number2[0]);
+                return 1;
+            } else {
+                index1 = number1[1] + 1;
+                index2 = number2[1] + 1;
+            }
+        }
+        if (index1 == versionServer.length() && index2 == versionLocal.length())
+            return 0;
+        if (index1 < versionServer.length())
+            return 1;
+        else
+            return -1;
+    }
+
+    /**
+     *
+     * @param version
+     * @param index
+     *            the starting point
+     * @return the number between two dots, and the index of the dot
+     */
+    public static int[] getValue(String version, int index) {
+        int[] value_index = new int[2];
+        StringBuilder sb = new StringBuilder();
+        while (index < version.length() && version.charAt(index) != '.') {
+            sb.append(version.charAt(index));
+            index++;
+        }
+        value_index[0] = Integer.parseInt(sb.toString());
+        value_index[1] = index;
+
+        return value_index;
+    }
+
+    public void Update(String url, Callback callback) {
+        Log.i(TAG, "Update:url = " + url);
+        UpgradeManager upgradeManager = new UpgradeManager(mContext);
+        upgradeManager.checkUpdateInfo(url, callback);
+    }
+}
